--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,13 @@ hr {
   max-width: 95%;
 }
 
-[type="number"] {
+[type="text"] {
   height: 50px;
   font-size: 1.5em;
   font-family: Poppins, sans-serif;
   max-width: 90%;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
 }
 
 [type="button"] {
